--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -42,7 +42,7 @@
         }
     }
 
-    @include media-query($on-palm) {
+    @include breakpoint(mobile) {
         position: absolute;
         top: 9px;
         right: $spacing-unit / 2;
@@ -141,7 +141,7 @@
     width:         calc(45% - (#{$spacing-unit} / 2));
 }
 
-@include media-query($on-laptop) {
+@include breakpoint(desktop) {
     .footer-col-1,
     .footer-col-2 {
         width: -webkit-calc(50% - (#{$spacing-unit} / 2));
@@ -154,7 +154,7 @@
     }
 }
 
-@include media-query($on-palm) {
+@include breakpoint(mobile) {
     .footer-col {
         float: none;
         width: -webkit-calc(100% - (#{$spacing-unit} / 2));
@@ -208,7 +208,7 @@
     letter-spacing: -1px;
     line-height: 1;
 
-    @include media-query($on-laptop) {
+    @include breakpoint(desktop) {
         font-size: 36px;
     }
 }
@@ -219,7 +219,7 @@
     h2 {
         font-size: 32px;
 
-        @include media-query($on-laptop) {
+        @include breakpoint(desktop) {
             font-size: 28px;
         }
     }
@@ -227,7 +227,7 @@
     h3 {
         font-size: 26px;
 
-        @include media-query($on-laptop) {
+        @include breakpoint(desktop) {
             font-size: 22px;
         }
     }
@@ -235,7 +235,7 @@
     h4 {
         font-size: 20px;
 
-        @include media-query($on-laptop) {
+        @include breakpoint(desktop) {
             font-size: 18px;
         }
     }
