--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,8 +4,20 @@ layout: default
 <article class="post" itemscope itemtype="http://schema.org/BlogPosting">
 
   <header class="post-header">
+          <p class="post__category">{{ page.categories }}</p>
     <h1 class="post-title" itemprop="name headline">{{ page.title }}</h1>
-    <p class="post-meta"><time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.date | date: "%b %-d, %Y" }}</time>{% if page.author %} • <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span itemprop="name">{{ page.author }}</span></span>{% endif %}</p>
+    <div class="post-meta">
+      <p><time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.date | date: "%b %-d, %Y" }}</time>{% if page.author %} • <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span itemprop="name">{{ page.author }}</span></span>{% endif %}<p>
+    </div>
+    {% if page.ingress %}
+    <p class="post__ingress">{{ page.ingress }}</p>
+    {% endif %}
+    {% if page.image %}
+    <figure>
+      <img class="post__image" src="{{ page.image }}">
+      <figcaption>{{ page.caption }}</figcaption>
+    </figure>
+    {% endif %}
   </header>
 
   <div class="post-content" itemprop="articleBody">
