--- a/css/main.scss
+++ b/css/main.scss
@@ -3,7 +3,7 @@
 ---
 @charset "utf-8";
 
-
+@import url('https://fonts.googleapis.com/css?family=Noto+Sans|Noto+Serif');
 
 // Our variables
 $base-font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -16,14 +16,17 @@ $spacing-unit:     30px;
 
 $text-color:       #111;
 $background-color: #fdfdfd;
-$brand-color:      #2a7ae2;
+$brand-color:      darken(#c6f, 15%);
 
 $grey-color:       #828282;
-$grey-color-light: lighten($grey-color, 40%);
+$grey-color-light: lighten($grey-color, 44%);
 $grey-color-dark:  darken($grey-color, 25%);
 
+$border-color: #ddd;
+$white-color: #fff;
+
 // Width of the content area
-$content-width:    800px;
+$content-width:    700px;
 
 $breakpoints: (
   mobile: 480px,
@@ -31,6 +34,8 @@ $breakpoints: (
   desktop: 992px
 );
 
+$font-sans: 'Noto Sans', sans-serif;
+$font-serif: 'Noto Serif', serif;
 
 //
 // Breakpoint mixin with named or pixel values.
@@ -114,5 +119,6 @@ $breakpoints: (
 @import
         "base",
         "layout",
+        "gt-theme",
         "syntax-highlighting"
 ;
