Point arkisto link to existing magazine archive

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,7 +11,7 @@
       <ul>
         <a href="/"><li class="navigation__item">Artikkelit</li></a>
         <a href="/lehti"><li class="navigation__item">Uusin lehti</li></a>
-        <a href="/arkisto"><li class="navigation__item">Arkisto</li></a>
+        <a href="http://as.fi/~gt/pdf/"><li class="navigation__item">Arkisto</li></a>
         <a href="toimitus"><li class="navigation__item">Toimitus</li></a>
         <a href="/tilaa"><li class="navigation__item">Tilaa</li></a>
       </ul>
