--- a/_sass/_gt-theme.scss
+++ b/_sass/_gt-theme.scss
@@ -9,7 +9,9 @@ body {
   @at-root {
     .teaser__image {
       display: inline-block;
-      max-width: 200px;
+      @include breakpoint(tablet) {
+        max-width: 200px;
+      }
     }
     .teaser__text {
       display: inline-block;
@@ -34,6 +36,10 @@ body {
 }
 
 .header__navigation {
+  ul {
+    margin: $spacing-unit /2 0;
+  }
+  text-align: center;
   .navigation__item {
     display: inline;
     padding: 20px;
@@ -42,7 +48,6 @@ body {
   a, a:visited, a:hover {
     color: $text-color;
   }
-  border-bottom: 1px solid $border-color;
 }
 
 .header__title {
@@ -60,6 +65,8 @@ body {
 
 .post-content {
   font-family: $font-serif;
+  float: left;
+  width: 65%;
 }
 
 .post__ingress {
@@ -78,12 +85,20 @@ body {
 }
 
 .post {
+  overflow: auto;
   padding: $spacing-unit;
   background-color: $white-color;
 }
 
-h2 a {
+h2 a,
+h3 a,
+h4 a {
   &, &:visited {
     color: $text-color;
   }
+}
+
+.sidebar {
+  float: right;
+  width: 25%;
 }
