--- a/_sass/_gt-theme.scss
+++ b/_sass/_gt-theme.scss
@@ -67,7 +67,7 @@ body {
   font-family: $font-serif;
   @include breakpoint(mobile) {
     float: left;
-    width: 65%;
+    width: 68%;
   }
 }
 
@@ -75,7 +75,7 @@ body {
   font-size: 1.15em;
   font-family: $font-serif;
   @include breakpoint(desktop) {
-    width: 80%;
+    width: 95%;
   }
 }
 
@@ -104,5 +104,6 @@ h4 a {
   @include breakpoint(mobile) {
     float: right;
     width: 25%;
+    padding-top: $spacing-unit / 2;
   }
 }
