--- a/_sass/_gt-theme.scss
+++ b/_sass/_gt-theme.scss
@@ -88,7 +88,10 @@ body {
 
 .post {
   overflow: auto;
-  padding: $spacing-unit;
+  padding: $spacing-unit / 2;
+  @include breakpoint(mobile) {
+    padding: $spacing-unit;
+  }
   background-color: $white-color;
 }
 
