Add layout, styling and typography changes

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -14,7 +14,7 @@ layout: default
     {% endif %}
   </header>
 
-  <div class="post-content" itemprop="articleBody">
+  <div class="post-content section-main" itemprop="articleBody">
     {% if page.image %}
     <figure>
       <img class="post__image" src="{{ page.image | prepend: site.baseurl }}">
