--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,11 +9,11 @@
     </div>
     <nav class="navigation header__navigation">
       <ul>
-        <a href="{{ site.baseurl }}/"><li class="navigation__item">Artikkelit</li></a>
-        <a href="{{ '/lehti' | prepend: site.baseurl }}'"><li class="navigation__item">Uusin lehti</li></a>
-        <a href="http://as.fi/~gt/pdf/"><li class="navigation__item">Arkisto</li></a>
-        <a href="{{ '/toimitus' | prepend: site.baseurl }}"><li class="navigation__item">Toimitus</li></a>
-        <a href="{{ '/tilaa' | prepend: site.baseurl }}"><li class="navigation__item">Tilaa</li></a>
+        <li class="navigation__item"><a href="{{ site.baseurl }}/">Artikkelit</a></li>
+        <li class="navigation__item"><a href="{{ '/lehti' | prepend: site.baseurl }}'">Uusin lehti</a></li>
+        <li class="navigation__item"><a href="http://as.fi/~gt/pdf/">Arkisto</a></li>
+        <li class="navigation__item"><a href="{{ '/toimitus' | prepend: site.baseurl }}">Toimitus</a></li>
+        <li class="navigation__item"><a href="{{ '/tilaa' | prepend: site.baseurl }}">Tilaa</a></li>
       </ul>
     </nav>
 
