--- a/css/main.scss
+++ b/css/main.scss
@@ -3,7 +3,7 @@
 ---
 @charset "utf-8";
 
-@import url('https://fonts.googleapis.com/css?family=Noto+Sans|Noto+Serif');
+@import url('https://fonts.googleapis.com/css?family=Noto+Sans|Noto+Serif|Fjalla+One');
 
 // Our variables
 $base-font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -17,9 +17,11 @@ $spacing-unit:     30px;
 $text-color:       #111;
 $background-color: #fdfdfd;
 $brand-color:      darken(#c6f, 15%);
+$brand-color-light: #c6f;
+$brand-color-lightest: lighten($brand-color-light, 20%);
 
 $grey-color:       #828282;
-$grey-color-light: lighten($grey-color, 44%);
+$grey-color-light: lighten($grey-color, 43%);
 $grey-color-dark:  darken($grey-color, 25%);
 
 $border-color: #ddd;
