--- a/_sass/_gt-theme.scss
+++ b/_sass/_gt-theme.scss
@@ -155,3 +155,28 @@ h4 a {
   text-align: center;
   margin: 5px;
 }
+
+.fourfold {
+  @extend %clearfix;
+}
+
+.fourfold__row {
+  @extend %clearfix;
+  @include breakpoint(0, tablet) {
+    border-top: 1px solid #ddd;
+  }
+}
+
+.fourfold__cell {
+    width: 33%;
+    float: left;
+    min-height: 100px;
+    border-top: 1px solid #ddd;
+    border-right: 1px solid #ddd;
+    padding: 10px;
+    box-sizing: border-box;
+    word-wrap: break-word;
+    @include breakpoint(0, tablet) {
+      border: none;
+    }
+}
