Create latest magazine page

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,7 +10,7 @@
     <nav class="navigation header__navigation">
       <ul>
         <li class="navigation__item"><a href="{{ site.baseurl }}/">Artikkelit</a></li>
-        <li class="navigation__item"><a href="{{ '/lehti' | prepend: site.baseurl }}'">Uusin lehti</a></li>
+        <li class="navigation__item"><a href="{{ '/uusi_lehti' | prepend: site.baseurl }}">Uusin lehti</a></li>
         <li class="navigation__item"><a href="http://as.fi/~gt/pdf/">Arkisto</a></li>
         <li class="navigation__item"><a href="{{ '/toimitus' | prepend: site.baseurl }}">Toimitus</a></li>
         <li class="navigation__item"><a href="{{ '/tilaa' | prepend: site.baseurl }}">Tilaa</a></li>
