Use border-box sizing by default

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -11,6 +11,18 @@ dl, dd, ol, ul, figure {
 
 
 /**
+ * Proper box-sizing
+ */
+html {
+  box-sizing: border-box;
+}
+*, *:before, *:after {
+  box-sizing: inherit;
+}
+
+
+
+/**
  * Basic styling
  */
 body {
