--- a/_sass/_gt-theme.scss
+++ b/_sass/_gt-theme.scss
@@ -228,3 +228,9 @@ h4 a {
     font-size: 0.8em;
   }
 }
+
+.sidebar__related {
+  padding-top: $spacing-unit;
+  margin-top: $spacing-unit;
+  border-top: 1px solid $border-color;
+}
