Link magazine cover to newest magazine page

--- a/_includes/magazine.html
+++ b/_includes/magazine.html
@@ -1,5 +1,7 @@
 <div class="sidebar__new-magazine teaser teaser--magazine">
   <h2>Uusin lehti</h2>
-  <img class="magazine-cover" src="{{ '/static/2017-02/kansi.png' | prepend: site.baseurl }}">
+  <a href="/uusi_lehti/">
+    <img class="magazine-cover" src="{{ '/static/2017-02/kansi.png' | prepend: site.baseurl }}">
+  </a>
   <p class="magazine__number">01/2017</p>
 </div>
