Add latest magazine description

--- a/_includes/magazine.html
+++ b/_includes/magazine.html
@@ -1,4 +1,4 @@
-<div class="sidebar__new-magazine teaser teaser--magazine">
+<div>
   <h2>Uusin lehti</h2>
   <a href="/uusi_lehti/">
     <img class="magazine-cover" src="{{ '/static/2017-02/kansi.png' | prepend: site.baseurl }}">
