--- a/_sass/_gt-theme.scss
+++ b/_sass/_gt-theme.scss
@@ -240,3 +240,7 @@ h4 a {
   margin-top: $spacing-unit;
   border-top: 1px solid $border-color;
 }
+
+.teaser--heading {
+  padding: $spacing-unit / 2 $spacing-unit / 4 0;
+}
