Create a workaround for special character handling in jekyll urls

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -4,7 +4,7 @@
     {% for post in site.posts limit:7 %}
       <div class="sidebar__teaser">
         <span class="post-meta"><span class="post__category">{{ post.categories | join: ' ' | replace: '_', ' ' }}</span>{{ post.date | date: "%d.%m.%Y"}}</span>
-        <h4><a href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a></h4>
+        <h4><a href="{{ post.url | prepend: site.baseurl | replace:'%C3%A4','ä' }}">{{ post.title }}</a></h4>
       </div>
     {% endfor %}
   </div>
@@ -16,7 +16,7 @@
         {% if post.title != page.title %}
           <div class="sidebar__teaser">
             <span class="post-meta"><span class="post__category">{{ post.categories | join: ' ' | replace: '_', ' ' }}</span>{{ post.date | date: "%d.%m.%Y"}}</span>
-            <h4><a href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a></h4>
+            <h4><a href="{{ post.url | prepend: site.baseurl | replace:'%C3%A4','ä' }}">{{ post.title }}</a></h4>
           </div>
         {% endif %}
       {% endfor %}
