Update magazine number on latest page

--- a/_includes/magazine.html
+++ b/_includes/magazine.html
@@ -3,5 +3,5 @@
   <a href="/uusi_lehti/">
     <img class="magazine-cover" src="{{ '/static/2017-rankka/kansi.jpg' | prepend: site.baseurl }}">
   </a>
-  <p class="magazine__number">01/2017</p>
+  <p class="magazine__number">{{ site.latest_magazine }}</p>
 </div>
