Create first draft of wappu calendar

--- a/css/main.scss
+++ b/css/main.scss
@@ -96,7 +96,7 @@ $font-serif: 'Noto Serif', serif;
     }
 }
 
-@media screen and (min-width: 600px) {
+@include breakpoint (tablet) {
     @for $i from 1 through 12 {
         .auto-col-#{$i} {
             width: $i / 12 * 98%;
