--- a/_sass/_gt-theme.scss
+++ b/_sass/_gt-theme.scss
@@ -251,3 +251,39 @@ h4 a {
 .teaser--heading {
   padding: $spacing-unit / 2 $spacing-unit / 4 0;
 }
+
+body.special-bg {
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='36' height='72' viewBox='0 0 36 72'%3E%3Cg fill-rule='evenodd'%3E%3Cg fill='%2348c8ec' fill-opacity='0.68'%3E%3Cpath d='M2 6h12L8 18 2 6zm18 36h12l-6 12-6-12z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+}
+
+.page--calendar.page--calendar {
+  width: 100%;
+  padding-top: 10px;
+}
+.calendar-item {
+  @include breakpoint(0, tablet) {
+    width: 46%;
+    float: left;
+  }
+  height: 120px;
+  background-color: $white-color;
+  margin: 5px;
+  text-align: center;
+  .calendar-item__cover {
+    padding-top: 40px;
+  }
+  .calendar-item__inside {
+    padding-top: 40px;
+    display: none;
+  }
+  &:hover {
+    border: 2px solid $brand-color;
+    .calendar-item__cover {
+      display: none;
+    }
+    .calendar-item__inside {
+      display: block;
+    }
+  }
+}
+
