Include special styles to main scss file

--- a/css/main.scss
+++ b/css/main.scss
@@ -122,5 +122,6 @@ $font-serif: 'Noto Serif', serif;
         "base",
         "layout",
         "gt-theme",
+        "special",
         "syntax-highlighting"
 ;
