Fix baseurl problems

--- a/_includes/magazine.html
+++ b/_includes/magazine.html
@@ -1,6 +1,6 @@
 <div>
   <h2>Uusin lehti</h2>
-  <a href="/uusi_lehti/">
+  <a href="{{ '/uusi_lehti/' | prepend: site.baseurl }}">
     <img class="magazine-cover" src="{{ '/static/2017-rankka/kansi.jpg' | prepend: site.baseurl }}">
   </a>
   <p class="magazine__number">{{ site.latest_magazine }}</p>
