--- a/css/main.scss
+++ b/css/main.scss
@@ -1,9 +1,13 @@
 ---
 # Only the main Sass file needs front matter (the dashes are enough)
 ---
+
+
 @charset "utf-8";
 
 @import url('https://fonts.googleapis.com/css?family=Noto+Sans|Noto+Serif|Fjalla+One');
+
+$baseurl: '{{site.baseurl}}';
 
 // Our variables
 $base-font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
