--- a/_layouts/wappu17-post.html
+++ b/_layouts/wappu17-post.html
@@ -6,7 +6,7 @@ layout: post
 body {
   animation: bg-color 60s infinite;
   -webkit-animation: bg-color 60s infinite;
-  background-image: url({{site.baseurl}}"/static/2017-wappu/icon-animated.gif");
+  background-image: url("{{site.baseurl}}/static/2017-wappu/icon-animated.gif");
 }
 @media (max-width: 600px) {
   .post-title {
@@ -14,7 +14,7 @@ body {
   }
 }
 .header__title {
-  background: url({{site.baseurl}}"/static/2017-wappu/korkkihommia.png") repeat-x;
+  background: url("{{site.baseurl}}/static/2017-wappu/korkkihommia.png") repeat-x;
   background-color: white;
   padding-top: 180px;
 }
