--- a/_sass/_special.scss
+++ b/_sass/_special.scss
@@ -7,6 +7,9 @@
   @include breakpoint(0, tablet) {
     width: 46%;
     float: left;
+    h2 {
+      font-size: 1.1em;
+    }
   }
   height: 120px;
   background-color: rgba(250, 250, 250, 0.9);
