Add shadow to cards for added perspective

--- a/_sass/_gt-theme.scss
+++ b/_sass/_gt-theme.scss
@@ -8,6 +8,7 @@ body {
     margin: ($spacing-unit / 2) 0;
   }
   background-color: $white-color;
+  border-bottom: 1px solid #dedede;
   @at-root {
     .teaser__image {
       display: inline-block;
@@ -50,6 +51,7 @@ body {
 
 .header__navigation {
   border-top: 3px solid $brand-color;
+  border-bottom: 1px solid #dedede;
   margin-top: $spacing-unit / 4;
   overflow: hidden;
   ul {
