Adjust teaser title size

--- a/_sass/_gt-theme.scss
+++ b/_sass/_gt-theme.scss
@@ -21,6 +21,9 @@ body {
       vertical-align: middle;
       padding: ($spacing-unit / 2);
     }
+    .teaser__title {
+      font-size: 21px;
+    }
   }
 }
 .teaser--with-image .teaser__text {
